[tool.poetry]
name = "excel"
version = "0.1.0"
description = ""
authors = ["I'm Beta <85835677+ArtiomOn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
xlrd = "^2.0.1"
xlutils = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

